--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        Veeresh
+                        <span class="text-primary">Angadimath</span>
                     </h1>
                     <div class="subheading mb-5">
                         <!-- 3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · -->
@@ -51,9 +51,9 @@
                     <!-- <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
                     <p class="lead mb-5">To develop my professional career, to obtain a challenging opportunity that allows me exhibit my skills to the success of the business project and thereby to the organization as a whole.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in">https://www.linkedin.com/in/VeereshBasawaraj</i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github">https://github.com/veereshba1</i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter">https://twitter.com/Veeresh_B_</i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/VeereshBasawaraj"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/veereshba1"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://twitter.com/Veeresh_B_"><i class="fab fa-twitter"></i></a>
                         <!-- <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a> -->
                     </div>
                 </div>
@@ -132,7 +132,7 @@
                         <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                         <img align="left" alt="Kubernetes" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/kubernetes.svg" />
-<img align="left" alt="Azure" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/microsoftazure.svg" />
+<li class="list-inline-item"> <img align="left" alt="Azure" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/microsoftazure.svg" /> </li>
 <img align="left" alt="Jenkins" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/jenkins.svg" />
 <img align="left" alt="Ansible" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/ansible.svg" />
 <img align="left" alt="Helm" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/helm.svg" />
