--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
                         <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                        <!-- <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
                         <li class="list-inline-item"><i class="fab fa-angular"></i></li>
                         <li class="list-inline-item"><i class="fab fa-react"></i></li>
                         <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
@@ -130,20 +130,20 @@
                         <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
                         <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
                         <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                        <img align="left" alt="Kubernetes" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/kubernetes.svg" />
-<li class="list-inline-item"> <img align="left" alt="Azure" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/microsoftazure.svg" /> </li>
-<img align="left" alt="Jenkins" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/jenkins.svg" />
-<img align="left" alt="Ansible" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/ansible.svg" />
-<img align="left" alt="Helm" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/helm.svg" />
-<img align="left" alt="Rancher" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/rancher.svg" />
-<img align="left" alt="Terraform" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/terraform.svg" />
-<img align="left" alt="Docker" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/docker.svg" />
-<img align="left" alt="AWS" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/amazonaws.svg" />
-<img align="left" alt="Python" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/python.svg" />
-<img align="left" alt="Java" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/java.svg" />
-<img align="left" alt="MySQL" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/mysql.svg" />
-<img align="left" alt="MongoDB" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/mongodb.svg" />
+                        <li class="list-inline-item"><i class="fab fa-npm"></i></li> -->
+                        <li class="list-inline-item"> <img align="left" alt="Kubernetes" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/kubernetes.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Azure" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/microsoftazure.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Jenkins" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/jenkins.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Ansible" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/ansible.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Helm" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/helm.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Rancher" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/rancher.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Terraform" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/terraform.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Docker" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/docker.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="AWS" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/amazonaws.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Python" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/python.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Java" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/java.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="MySQL" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/mysql.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="MongoDB" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/mongodb.svg" /> </li>
                         
                     </ul>
                     <!-- <div class="subheading mb-3">Workflow</div>
