--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!-- About-->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
-                    <h1 class="mb-1">
+                    <h1 class="mb-0">
                         Veeresh
                         <span class="text-primary">Angadimath</span>
                     </h1>
@@ -119,8 +119,8 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+                        <!-- <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li> -->
                         <!-- <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
                         <li class="list-inline-item"><i class="fab fa-angular"></i></li>
                         <li class="list-inline-item"><i class="fab fa-react"></i></li>
@@ -131,19 +131,19 @@
                         <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
                         <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li> -->
-                        <li class="list-inline-item"> <img align="left" alt="Kubernetes" width="30px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/kubernetes.svg" /> </li>
-                        <li class="list-inline-item"> <img align="left" alt="Azure" width="32px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/microsoftazure.svg" /> </li>
-                        <li class="list-inline-item"> <img align="left" alt="Jenkins" width="34px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/jenkins.svg" /> </li>
-                        <li class="list-inline-item"> <img align="left" alt="Ansible" width="36px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/ansible.svg" /> </li>
-                        <li class="list-inline-item"> <img align="left" alt="Helm" width="40px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/helm.svg" /> </li>
-                        <li class="list-inline-item"> <img align="left" alt="Rancher" width="42px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/rancher.svg" /> </li>
-                        <li class="list-inline-item"> <img align="left" alt="Terraform" width="44px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/terraform.svg" /> </li>
-                        <li class="list-inline-item"> <img align="left" alt="Docker" width="46px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/docker.svg" /> </li>
-                        <li class="list-inline-item"> <img align="left" alt="AWS" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/amazonaws.svg" /> </li>
-                        <li class="list-inline-item"> <img align="left" alt="Python" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/python.svg" /> </li>
-                        <li class="list-inline-item"> <img align="left" alt="Java" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/java.svg" /> </li>
-                        <li class="list-inline-item"> <img align="left" alt="MySQL" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/mysql.svg" /> </li>
-                        <li class="list-inline-item"> <img align="left" alt="MongoDB" width="26px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/mongodb.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Kubernetes" width="43px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/kubernetes.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Azure" width="43px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/microsoftazure.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Jenkins" width="43px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/jenkins.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Ansible" width="43px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/ansible.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Helm" width="43px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/helm.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Rancher" width="43px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/rancher.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Terraform" width="43px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/terraform.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Docker" width="43px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/docker.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="AWS" width="43px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/amazonaws.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Python" width="43px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/python.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="Java" width="43px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/java.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="MySQL" width="43px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/mysql.svg" /> </li>
+                        <li class="list-inline-item"> <img align="left" alt="MongoDB" width="43px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/mongodb.svg" /> </li>
                         
                     </ul>
                     <!-- <div class="subheading mb-3">Workflow</div>
