--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume</title>
+        <title>Portfolio</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#certifications">Certifications</a></li>
                 </ul>
             </div>
         </nav>
@@ -46,12 +46,12 @@
                     <div class="subheading mb-5">
                         <!-- 3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · -->
                         8050549220 ·
-                        <a href="mailto:name@email.com">veeresh.angadimath@email.com</a>
+                        <a href="mailto:name@email.com">veeresh.angadimath@gmail.com</a>
                     </div>
                     <!-- <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
                     <p class="lead mb-5">To develop my professional career, to obtain a challenging opportunity that allows me exhibit my skills to the success of the business project and thereby to the organization as a whole.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/VeereshBasawaraj"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="www.linkedin.com/in/veereshba"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/veereshba1"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://twitter.com/Veeresh_B_"><i class="fab fa-twitter"></i></a>
                         <!-- <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a> -->
@@ -67,7 +67,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">DevOps Engineer</h3>
                             <div class="subheading mb-3">Everwell Health Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <p>Part of a team that works extensively on spinning up new clusters, dockerise the applications, setting up a CI/CD pipleine for the same. I have worked on tools such as Prometheus, Ansible, GitLab, Helm for quick and smooth deployment and monitoring. Have a strong knowledge on Kubernetes and Linux. Created Ansible script to spin up new production clsuters which in turn reduced the time by 80%. Have setup alerting system and integrated it with Slack. </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">April 2021 - Present</span></div>
                     </div>
@@ -75,17 +75,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer</h3>
                             <div class="subheading mb-3">Unisys India</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <p>Jenkins Job creation and execution, that deals with building the job with parameters, based on which there is a security check scan on the latest code commit. Created a pipeline in DeployHub for the migration of APIs from one environment to another which helped in demonstrating an end-to-end deployment of APIs from a source API Manager to a Destination API Manager. Automated benchmarking of Strimzi Kafka using python script and deployed on Rancher (Kubernetes).</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2020 - April 2021</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Associate Software Engineer</h3>
-                            <div class="subheading mb-3">Unisys India</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2018 - September 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2018 - April 2021</span></div>
                     </div>
                 </div>
             </section>
@@ -104,8 +96,9 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Vidya Mandir Pre University</h3>
-                            <div class="subheading mb-3">Science (PCMC)</div>
+                            <h3 class="mb-0">Vidya Mandir</h3>
+                            <div class="subheading mb-3">Pre University</div>
+                            <div>Science ( PCMC ) </div>
                             <!-- <p>GPA: 3.56</p> -->
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2012 - March 2014</span></div>
@@ -119,18 +112,6 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <!-- <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li> -->
                         <li class="list-inline-item"> <img align="left" alt="Kubernetes" width="43px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/kubernetes.svg" /> </li>
                         <li class="list-inline-item"> <img align="left" alt="Azure" width="43px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/microsoftazure.svg" /> </li>
                         <li class="list-inline-item"> <img align="left" alt="Jenkins" width="43px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.4.0/icons/jenkins.svg" /> </li>
@@ -178,48 +159,36 @@
             </section>
             <hr class="m-0" />
             <!-- Awards-->
-            <section class="resume-section" id="awards">
+            <section class="resume-section" id="certifications">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards & Certifications</h2>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
+                            LFS169: Introduction to GitOps
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
+                            GitOps Fundamentals
                         </li>
                         <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Certified Rancher Operator: Level One
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Python for Data Science and Machine Learning Bootcamp
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            Unisys DevSecOps for Software Developers
+                        </li>
+                        <!-- <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             1
                             <sup>st</sup>
                             Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </section>
