--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Vidya Mandir</h3>
+                            <h3 class="mb-0">Vidya Mandir, Bengaluru</h3>
                             <div class="subheading mb-3">Pre University</div>
                             <div>Science ( PCMC ) </div>
                             <!-- <p>GPA: 3.56</p> -->
