Added CKA certification

--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            CKA: Certified Kubernetes Administrator
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             LFS169: Introduction to GitOps
                         </li>
                         <li>
