--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
                     <!-- <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
                     <p class="lead mb-5">To develop my professional career, to obtain a challenging opportunity that allows me exhibit my skills to the success of the business project and thereby to the organization as a whole.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="www.linkedin.com/in/veereshba"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/veereshba/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/veereshba1"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://twitter.com/Veeresh_B_"><i class="fab fa-twitter"></i></a>
-                        <!-- <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a> -->
                     </div>
                 </div>
             </section>
@@ -67,7 +66,6 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">DevOps Engineer</h3>
                             <div class="subheading mb-3">Everwell Health Solutions</div>
-                            <!-- <p>Part of a team that works extensively on spinning up new clusters, dockerise the applications, setting up a CI/CD pipleine for the same. I have worked on tools such as Prometheus, Ansible, GitLab, Helm for quick and smooth deployment and monitoring. Have a strong knowledge on Kubernetes and Linux. Created Ansible script to spin up new production clsuters which in turn reduced the time by 80%. Have setup alerting system and integrated it with Slack. </p> -->
                             <li>Worked extensively on spinning up new clusters, dockerize the applications, and setting up a CI/CD pipeline for the same.</li>
                             <li>Set up a CI-CD pipeline for automatic DB-Dumps of all the applications (all envs) and dump them to Azure file share using python and azure's CIFS file mount. Runs on k8s cluster as cronjob</li>
                             <li>Streamlining of Helm Charts - Creation, updating, and moving them to a private repo. Creation of docker images with custom tagging for multiple production envs</li>
@@ -167,7 +165,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being a DevOps Engineer, I enjoy most of my time being outdoors. I also enjoy gaming, swimming and listening to Music! I do like long rides/drives.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies, animes and television shows.</p>
+                    <p class="mb-0">When forced indoors, I follow a number of sci-fi genre movies, animes and television shows.</p>
                 </div>
             </section>
             <hr class="m-0" />
