--- a/index.html
+++ b/index.html
@@ -44,11 +44,9 @@
                         <span class="text-primary">Angadimath</span>
                     </h1>
                     <div class="subheading mb-5">
-                        <!-- 3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · -->
                         8050549220 ·
-                        <a href="mailto:name@email.com">veeresh.angadimath@gmail.com</a>
+                        <a href="mailto:veeresh.angadimath@gmail.com">Email</a>
                     </div>
-                    <!-- <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
                     <p class="lead mb-5">To develop my professional career, to obtain a challenging opportunity that allows me exhibit my skills to the success of the business project and thereby to the organization as a whole.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/veereshba/"><i class="fab fa-linkedin-in"></i></a>
