--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                            CKS: Certified Kubernetes Security Specialist
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             LFS169: Introduction to GitOps
                         </li>
                         <li>
